Fix for Java 16